@@ -1,3 +1,14 @@
+2012-06-13  Arnaud Renevier  <arno@renevier.net>
+
+        make sure headers are included only once per file
+        https://bugs.webkit.org/show_bug.cgi?id=88929
+
+        Reviewed by Kentaro Hara.
+
+        * wtf/FastMalloc.cpp:
+        * wtf/MathExtras.h:
+        * wtf/OSAllocator.h:
+
 2012-06-13  Benjamin Poulain  <benjamin@webkit.org>
 
         Implement the simple constructors WTFURL's KURL
